--- a/admin/oldSite/index.html
+++ b/admin/oldSite/index.html
@@ -10,6 +10,9 @@
 <body>
 	<h1>blog</h1>
 <p>squelette de blog réalisé en php</p>
-<p></p>
+<p><h2><a href="test3.html">test3</a></h2>
+<p>test3</p><h2><a href="test2.html">test2</a></h2>
+<p>test2</p><h2><a href="test.html">test</a></h2>
+<p>test</p></p>
 </body>
 </html>
