--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<h1>blog</h1>
 <p>squelette de blog réalisé en php</p>
-<p></p>
+<p><h2><a href="montage-dossier-distant.html">montage-dossier-distant</a></h2>
+<p>J'ai souvent besoin de partager des fichiers entre mes postes et mes VPS. J'ai donc cherché une solution me permettant de monter un dossier distant sur un poste local.</p></p>
 </body>
 </html>
