--- a/admin/oldSite/index.html
+++ b/admin/oldSite/index.html
@@ -1,3 +1,9 @@
+<?php
+session_start();
+if ($_GET['action']=='logout'){
+	$_SESSION = array();
+	$errMsg = '<div style="border:solid 2px green;background:lightgreen;color:green;padding:1em;display:inline-block">Votre session est terminée.</div>';
+}?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,10 +12,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/prism.css">
+	<script type="text/javascript" src="js/prism.js"></script>
 </head>
 <body>
 	<h1>blog</h1>
-<p>squelette de blog réalisé en php</p>
-<p></p>
+<ul class="columns"><li class="case left"><a href="index.html" class="droid bouton">Home</a></li><li class="case right"><a href="admin/main.php" class="droid bouton">Administration</a></ul>
+<p class="droid">squelette de blog réalisé en php</p>
+<p class="droid"><h2><a href="blabla.html">blabla</a></h2>
+<p>blabla</p><h2><a href="montage-dossier-distant.html">montage-dossier-distant</a></h2>
+<p>J'ai souvent besoin de partager des fichiers entre mes postes et mes VPS. J'ai donc cherché une solution me permettant de monter un dossier distant sur un poste local.</p></p>
 </body>
 </html>
