--- a/blabla.html
+++ b/blabla.html
@@ -7,15 +7,18 @@ if ($_GET['action']=='logout'){
 <!DOCTYPE html>
 <html>
 <head>
-	<title>{siteTitle} - {pageTitle}</title>
+	<title>blog - blabla</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="{pageDescription}">
+	<meta name="description" content="blabla">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/prism.css">
 	<script type="text/javascript" src="js/prism.js"></script>
 </head>
 <body>
-	{content}
+	<h1 class="titrarticle">blabla</h1>
+<p class="resume">blabla</p>
+<p><p>blabla</p></p>
+<div class="footer"><p><a href="montage-dossier-distant.html"title="Article suivant">montage-dossier-distant</a> - <a href="index.html">Accueil</a> - </p></div>
 </body>
 </html>
