--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<h1>Blog</h1>
-<ul class="columns"><li class="case left active"><a href="index.html" class="helvetica bouton">Home</a></li><li class="case left"><a href="admin/main.php" class="helvetica bouton">Administration</a></li><li class="case right"><a href="admin/index.php" class="helvetica bouton">Login</a></li></ul>
+<ul class="columns"><li class="case left active"><a href="index.html" class="free_sans bouton">Home</a></li><li class="case left"><a href="admin/main.php" class="free_sans bouton">Administration</a></li><li class="case right"><a href="admin/index.php" class="free_sans bouton">Login</a></li></ul>
 <p class="droid">squelette de blog réalisé en php</p>
 <p class="droid"></p>
 </body>
